RMNRW-368 page styling

--- a/source/sass/components/_footer.scss
+++ b/source/sass/components/_footer.scss
@@ -136,6 +136,7 @@
     background-color: $brand-primary;
     padding: $padding-base-vertical*4 $padding-base-horizontal $padding-base-vertical*4;
     font-size: $font-size-base - 4;
+    font-weight: bold;
     .menu{
       list-style: none;
       text-align: right;
