--- a/source/sass/elements/_navs.scss
+++ b/source/sass/elements/_navs.scss
@@ -174,6 +174,7 @@
     &.is-active {
       &:after{
         @include triangle-up($size: 10px);
+        border-bottom-color: $nrw-secondary;
         bottom: 0;
         left: 50%;
         transform: translateX(-50%);
