--- a/source/sass/modules/node_normal_page/_node_normal_page.scss
+++ b/source/sass/modules/node_normal_page/_node_normal_page.scss
@@ -41,3 +41,15 @@
     }
   }
 }
+.normal-page__teaser-content {
+  .normal-page__teaser-text {
+    font-size: $font-size-h6;
+    font-weight: normal;
+  }
+  .normal-page__teaser-title {
+    h3 {
+      font-weight: bold;
+      font-size: $font-size-h2;
+    }
+  }
+}
