--- a/source/sass/views/_view-blog_author.scss
+++ b/source/sass/views/_view-blog_author.scss
@@ -2,7 +2,9 @@
   margin: 0 -$padding-large-vertical*2;
   color: $brand-primary;
   background: $nrw-light;
-
+  .form-group{
+    margin: 0;
+  }
   p {
     padding: 20px;
   }
