--- a/source/sass/elements/_form.scss
+++ b/source/sass/elements/_form.scss
@@ -123,6 +123,24 @@ form.webform-submission-form{
 }
 .block-simplenews{
   .btn {
+    &[data-drupal-selector="edit-subscribe"]{
+      @include icon-after($fa-var-paper-plane);
+      &:after{
+        color: white;
+        padding: $grid-gutter-width/4;
+        background-color: $nrw-green;
+        font-size: $font-size-base;
+      }
+    }
+    &[data-drupal-selector="edit-unsubscribe"]{
+      @include icon-after($fa-var-times);
+      &:after{
+        color: white;
+        padding: $grid-gutter-width/4;
+        background-color: $brand-primary;
+        font-size: $font-size-base;
+      }
+    }
     &-default{
       background: transparent;
       border: 0px solid $brand-secondary;
@@ -132,16 +150,10 @@ form.webform-submission-form{
       padding-right: 0;
       font-size: $font-size-small;
       font-weight: bold;
-      @include icon-after($fa-var-paper-plane);
       &:focus{
         border: 1px dotted $brand-secondary;
       }
-      &:after{
-        color: white;
-        padding: $grid-gutter-width/4;
-        background-color: $nrw-green;
-        font-size: $font-size-base;
-      }
+
     }
   }
 }
