RMNRW-394 restructure header after check front page

--- a/source/sass/components/_shariff-2click.scss
+++ b/source/sass/components/_shariff-2click.scss
@@ -81,3 +81,8 @@
 .shariff  ul.theme-grey  .addthis.theme-colored a {
   background-color: #f8694d
 }
+
+.shariff .fa {
+  padding-left: $grid-gutter-width/4;
+  margin-right: $grid-gutter-width/4;
+}
