--- a/source/sass/elements/_nodes.scss
+++ b/source/sass/elements/_nodes.scss
@@ -7,6 +7,9 @@ article.long-text {
   }
   .teaser-image{
     padding: 0;
+    .image__caption {
+      display: none;
+    }
   }
   &:nth-child(odd){
     .teaser-image{
@@ -33,6 +36,9 @@ article.slim {
   padding: 0;
   .teaser-image{
     padding: 0;
+    .image__caption {
+      display: none;
+    }
   }
   .teaser-content{
     max-height: 320px;
@@ -63,6 +69,11 @@ article.slim {
 }
 
 article.slim{
+  .teaser-image{
+    .image__caption {
+      display: none;
+    }
+  }
   .teaser-content{
     padding: $grid-gutter-width/2;
   }
@@ -72,6 +83,9 @@ article.small-image{
   border-bottom: 1px solid #dde6f0;
   .teaser-image{
     padding: $grid-gutter-width/2;
+    .image__caption {
+      display: none;
+    }
   }
   .teaser-content{
     padding: $grid-gutter-width/2;
