--- a/source/sass/print.scss
+++ b/source/sass/print.scss
@@ -3,16 +3,84 @@
 
 @media print{
   body{
-    .header-wrapper, .footer-wrapper, .breadcrumb, .sharing ,img, aside , .tabs, .contextual, .tags{
+    .header-wrapper .header__upper-menu,
+    .header-wrapper .header__menu-icon,
+    .header-wrapper .header__menu,
+    .footer__upper,
+    .footer__menu,
+    .footer__footer_menu,
+    .breadcrumb,
+    .sharing,
+    img,
+    .img-responsive,
+    aside,
+    .tabs,
+    .contextual,
+    .tags,
+    .paragraph__header i {
       display: none ;
+    }
+
+    div[class*='col-sm'],
+    article[class*='col-sm'],
+    section[class*='col-sm'],
+    .region-content div,
+    .header__title,
+    .footer,
+    .press .date,
+    .full .header,
+    .media {
+      width: 100%;
+      margin-left: 0;
+      margin-right: 0;
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+    }
+    h1.page-header {
+      font-size: $font-size-h1 - 4;
+      line-height: 1;
+    }
+    h2,
+    h3,
+    .normal-page__teaser-content .normal-page__teaser-title h3 {
+      font-size: $font-size-h4;
+    }
+    .paragraph__header h2 {
+      font-size: $font-size-h2;
+      margin-top: $grid-gutter-width*1.5;
+    }
+    .paragraph__content {
+      padding-top: 0;
+    }
+    .header__title {
+      display: block;
+      padding-top: $padding-large-vertical;
+      position: relative;
+      height: auto;
+    }
+    .header__logo img {
+      display: block;
     }
     a{
       &:after{
         content: '' !important;
       }
     }
+    *:after {
+      border: none !important;
+    }
+    .main-container,
+    .row,
+    .view-reference .view-content,
+    .node-reference .paragraph__content {
+      margin: 0;
+      max-width: 100%;
+    }
     table{
       border-bottom: 0;
+    }
+    .header {
+      max-width: 100%;
     }
     .header-image__text{
       &:after{
@@ -38,7 +106,8 @@
       }
     }
     .slideshow {
-      button{
+      button,
+      .slick-slide img {
         display: none !important;
       }
       .slick-track{
@@ -52,6 +121,8 @@
           }
           .slide__text{
             width: 100%;
+            margin-bottom: 0;
+            padding-bottom: $grid-gutter-width/2;
           }
         }
       }
@@ -67,55 +138,107 @@
     .block-degov-tweets{
       display: none;
     }
+    .footer {
+      max-width: 100%;
+      &__copyright {
+        font-weight: normal;
+        padding: 0;
+        margin-top: $grid-gutter-width;
+      }
+    }
   }
 }
 
 body.print{
   background: transparent;
-  div[class*='col-sm'], article[class*='col-sm'], .region-content div{
+  [class*='col-sm'],
+  .region-content div,
+  .footer {
     width: 100%;
     padding-left: 0 !important;
-    padding-right: 0 !important; 
+    padding-right: 0 !important;
   }
-  div{
+  div,
+  .footer,
+  .press .date,
+  .media {
     margin-left: 0 !important;
     margin-right: 0 !important;
   }
+  .header-wrapper .header__upper-menu,
+  .header-wrapper .header__menu,
+  .footer__upper,
+  .footer__menu,
+  .footer__footer_menu,
+  .breadcrumb,
+  .sharing,
+  img,
+  aside ,
+  .tabs,
+  .contextual,
+  .tags,
+  .social-media-source-youtube,
+  .paragraph__header i  {
+    display: none ;
+  }
   h1, h2, h3, h4, h5, h6,
-  .h1, .h2, .h3, .h4, .h5, .h6 {
+  .h1, .h2, .h3, .h4, .h5, .h6,
+  .header__title {
     color: $gray-base;
+  }
+  h1.page-header {
+    font-size: $font-size-h1 - 4;
+    line-height: 1;
+  }
+  h2,
+  h3,
+  .normal-page__teaser-content .normal-page__teaser-title h3 {
+    font-size: $font-size-h4;
+  }
+  .paragraph__header h2 {
+    font-size: $font-size-h2;
+    margin-top: $grid-gutter-width*1.5;
+  }
+  .header__logo img {
+    display: block;
+  }
+  .paragraph__content {
+    padding-top: 0;
+  }
+  .header__title {
+    padding: 0;
   }
   .slideshow .slick-track .slick-slide .slide__text{
     color: $gray_base;
+    margin-bottom: 0;
+    padding-bottom: $grid-gutter-width/2;
   }
-  .main-wrapper {
+  .main-wrapper,
+  .footer__bottom-menu {
     background-color: transparent;
   }
   .main-container{
     margin: 0;
+    max-width: 100%;
   }
   .region-header-region{
     background: transparent;
     color: $gray-base;
+    padding: 0;
+  }
+  .header {
+    max-width: 100%;
+    background: $color-white;
   }
   .content-header__text{
     background: transparent;
     color: $gray-base;
-  }
-  .header-wrapper, .footer-wrapper, .breadcrumb, .sharing ,img, aside , .tabs, .contextual, .tags{
-    display: none ;
   }
   .view-reference .view-content{
     margin: 20px;
   }
   div[class*="__header-paragraphs"] .paragraph a{
     color: $gray-base;
-  }
-  div[class*="-image"]{
-    display: none;
-  }
-  .social-media-source-youtube{
-    display: none;
   }
   .faq_question{
     color: $gray-base;
@@ -128,6 +251,9 @@ body.print{
     &:after{
       content: '' !important;
     }
+  }
+  *:after {
+    border: none !important;
   }
   table{
     border-bottom: 0;
@@ -158,12 +284,11 @@ body.print{
   .slick-dots, .slick-arrow{
     display: none !important;
   }
-  .paragraph__header{
+  .paragraph__header,
+  .footer-wrapper,
+  .blog__header-date {
     background: transparent;
     color: $gray-base;
-    i{
-      display: none;
-    }
   }
   .slideshow {
     button{
@@ -194,6 +319,15 @@ body.print{
   }
   .block-degov-tweets{
     display: none;
+  }
+  .footer {
+    max-width: 100%;
+    &__copyright {
+      font-weight: normal;
+      margin-top: $grid-gutter-width;
+      padding: 0;
+      color: $gray-base;
+    }
   }
 }
 
