--- a/source/sass/modules/media_contact/_media-contact.scss
+++ b/source/sass/modules/media_contact/_media-contact.scss
@@ -47,7 +47,7 @@ aside{
         padding: $grid-gutter-width/2;
         background-color: $color-white;
         color: $text-color;
-        margin: $grid-gutter-width/2 -1*($grid-gutter-width/2) 0;
+        margin: 0;
         border-bottom: 1px solid $color-gray;
         &__image-wrapper{
            @include make-md-column(4);
@@ -56,12 +56,10 @@ aside{
         &__position{
             color: $brand-secondary;
             font-weight: bold;
-            padding: 0 $grid-gutter-width/2;
-            margin-bottom: $grid-gutter-width/2;
+            margin-bottom: $padding-base-vertical*5;
             margin-top: 0;
         }
         &__info{
-            //margin: $grid-gutter-width/2 0 0  0;
             display: flex;
             flex-direction: column;
             justify-content: center;
