adjust margin on contact media - RMNRW-369

--- a/source/sass/modules/media_contact/_media-contact.scss
+++ b/source/sass/modules/media_contact/_media-contact.scss
@@ -48,7 +48,9 @@ aside{
         background-color: $color-white;
         color: $text-color;
         margin: 0;
-        border-bottom: 1px solid $color-gray;
+        + .media-contact {
+            border-top: 1px solid $color-gray;
+        }
         &__image-wrapper{
            @include make-md-column(4);
            margin-bottom: 0;
