--- a/source/sass/elements/_tags.scss
+++ b/source/sass/elements/_tags.scss
@@ -51,7 +51,7 @@ $tag-font-size: 12px;
   color: $color-white;
   margin-right: 0;
   font-size: $font-size-small;
-  padding: $grid-gutter-width/10 0;
+  padding: $grid-gutter-width/10;
   a{
     color: $color-white;
     text-decoration: none;
