--- a/source/sass/views/_view-events.scss
+++ b/source/sass/views/_view-events.scss
@@ -67,6 +67,12 @@
       }
     }
   }
+  .view-footer {
+    padding: $grid-gutter-width/2 0;
+  }
+  .event__teaser {
+    margin-bottom: $padding-base-horizontal;
+  }
 }
 .view-calendar__header{
 	font-size: $font-size-h3;
