style on media galery default view mode - RMNRW-393

--- a/source/sass/elements/_tags.scss
+++ b/source/sass/elements/_tags.scss
@@ -65,3 +65,14 @@ $tag-font-size: 12px;
     }
   }
 }
+.media .tags > a {
+  padding-right: $padding-xs-horizontal;
+  &:after{
+    content: ',';
+  }
+  &:last-child{
+    &:after{
+      content: '';
+    }
+  }
+}
