--- a/source/sass/modules/media_video/_media-video.scss
+++ b/source/sass/modules/media_video/_media-video.scss
@@ -23,7 +23,7 @@
     left: 0;
     right: 0;
     & > div {
-      display: inline;
+      //display: inline;
     }
   }
   &__caption,
@@ -41,6 +41,9 @@
       text-align: right;
     }
   }
+  &__video {
+    position: relative;
+  }
   video {
     width: 100%;
     height: auto;
@@ -51,6 +54,67 @@
     margin: 0;
   }
 }
+
+.media-video.view-mode-full,
+.media-video-upload.view-mode-full {
+  .video__caption,
+  .video-upload__caption,
+  .video__copyright,
+  .video-upload__copyright {
+    background: rgba($gray-dark, 0.7);
+  }
+  .video-upload__extra-info,
+  .video__extra-info {
+    padding: $grid-gutter-width/2;
+    background: $brand-secondary;
+  }
+  .video-upload__duration,
+  .video__duration {
+    font-weight: bold;
+    padding: $padding-large-vertical 0;
+  }
+  .video__description,
+  .video__description {
+    font-size: $font-size-h4;
+  }
+  .tags {
+    padding: $vertical-gutter-width/2 0 $vertical-gutter-width 0;
+    font-size: $font-size-small;
+    &:before {
+      position: initial;
+      font-size: $font-size-h3;
+      padding-right: $padding-xs-horizontal;
+    }
+  }
+  .video-upload__transcription,
+  .video__transcription {
+    color: $brand-secondary;
+    &__header {
+      background: $nrw-light;
+      font-weight: bold;
+      padding: $padding-large-vertical $grid-gutter-width/2;
+      i {
+        width: 2em;
+        vertical-align: middle;
+      }
+      i:before {
+        margin: auto;
+        margin-right: $padding-small-horizontal;
+        font-size: $font-size-h1;
+      }
+    }
+    &__body {
+      background: $color-white;
+      padding: $grid-gutter-width/2 $grid-gutter-width;
+      font-size: $font-size-base;
+      line-height: 1.5;
+      &.closed {
+        display: none;
+      }
+    }
+  }
+}
+
 // Add alignment exception per region.
 // @todo: will probably need to be done with javascript based on image size.
 .region-sidebar-second,
