--- a/source/sass/components/_search.scss
+++ b/source/sass/components/_search.scss
@@ -204,7 +204,8 @@
         .date-filter{
           float: right;
           border: 0;
-          &:hover{
+          &:hover,
+          &:focus{
             background: transparent;
           }
           span{
