--- a/source/sass/modules/eu_cookie_compliance/_styles.scss
+++ b/source/sass/modules/eu_cookie_compliance/_styles.scss
@@ -55,7 +55,8 @@
       &:last-child {
         margin-right: 0;
       }
-      &:hover {
+      &:hover,
+      &:focus {
         background: $brand-primary;
       }
     }
