--- a/source/sass/modules/node_press/_node-press.scss
+++ b/source/sass/modules/node_press/_node-press.scss
@@ -37,7 +37,8 @@
     line-height: 1.1;
     font-family: $font-family-sans-serif;
     font-weight: bold;
-    &:hover {
+    &:hover,
+    &:focus {
       text-decoration: underline;
       cursor: pointer;
     }
