fix view reference footer

--- a/source/sass/modules/paragraph_view_reference/_paragraph-view-reference.scss
+++ b/source/sass/modules/paragraph_view_reference/_paragraph-view-reference.scss
@@ -3,6 +3,8 @@
     margin: $padding-small-horizontal*-2;
   }
   .view-footer {
+    position: relative;
+    z-index: 10;
     a {
       padding-right: $padding-base-horizontal;
       color: $brand-primary;
