some more styling on video media - RMNRW-393

--- a/source/sass/elements/_type.scss
+++ b/source/sass/elements/_type.scss
@@ -40,6 +40,7 @@ h3{
   }
   .file-size {
     padding: 0 $padding-base-horizontal 0 0;
+    text-align: initial;
   }
   .file-type {
     padding: 0 $padding-xs-horizontal/2;
