style audio full view mode - RMNRW-393

--- a/source/sass/modules/media_video/_media-video.scss
+++ b/source/sass/modules/media_video/_media-video.scss
@@ -94,6 +94,7 @@
   .video-upload__transcription,
   .video__transcription {
     color: $brand-secondary;
+    clear: both;
     &__header {
       background: $nrw-light;
       font-weight: bold;
