--- a/source/sass/modules/media_audio/_media-audio.scss
+++ b/source/sass/modules/media_audio/_media-audio.scss
@@ -19,8 +19,82 @@
     padding: $vertical-gutter-width/2;
   }
 
+  .audio__extra-info {
+    padding-left: $grid-gutter-width/2;
+    padding-right: $grid-gutter-width/2;
+  }
+  .audio__duration {
+    font-weight: bold;
+    padding: $padding-large-vertical 0;
+  }
+  .audio__date {
+    padding-top: $padding-base-vertical;
+    padding-bottom: $vertical-gutter-width/2;
+    font-size: $font-size-h4;
+  }
+
+  .audio__description {
+    font-size: $font-size-h4;
+    padding-bottom: $vertical-gutter-width/2;
+  }
+
+  .audio__downloads {
+    float: right;
+    .file {
+      width: 100%;
+      background: $color-white;
+      padding: $padding-large-horizontal/2;
+      margin-bottom: $padding-large-vertical;
+      &,
+      a {
+        color: $nrw-secondary;
+      }
+    }
+  }
+
+  .audio__transcription {
+    color: $brand-secondary;
+    clear: both;
+    &__header {
+      background: $nrw-light;
+      font-weight: bold;
+      padding: $padding-large-vertical $grid-gutter-width/2;
+      cursor: pointer;
+      i {
+        width: 2em;
+        vertical-align: middle;
+      }
+      i:before {
+        margin: auto;
+        margin-right: $padding-small-horizontal;
+        font-size: $font-size-h1;
+      }
+    }
+    &__body {
+      background: $color-white;
+      padding: $grid-gutter-width/2 $grid-gutter-width;
+      font-size: $font-size-base;
+      line-height: 1.5;
+      &.closed {
+        display: none;
+      }
+    }
+  }
+  .audio__assets {
+    padding: $vertical-gutter-width/2 0;
+    font-size: $font-size-small;
+  }
   .tags {
-    margin: 0 $vertical-gutter-width/2;
+    padding: 0 0 $vertical-gutter-width 0;
+    font-size: $font-size-small;
+    &:before {
+      position: initial;
+      font-size: $font-size-h3;
+      padding-right: $padding-xs-horizontal;
+    }
+  }
+  .tags {
+    //margin: 0 $vertical-gutter-width/2;
   }
   .media-image {
     margin: 0;
