--- a/STARTER_KIT/source/sass/_variables.scss
+++ b/STARTER_KIT/source/sass/_variables.scss
@@ -3,20 +3,63 @@
  */
 $bootstrap-sass-asset-helper: false;
 
-$fa-font-path:   "../../../../contrib/degov_nrw_theme/public/fonts/font-awesome";
+$fa-font-path:   "../../../../nrw/nrw_base_theme/public/fonts/font-awesome";
+
+@font-face {
+  font-family: "BentonSans-Regular";
+  src: url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Regular/BentonSans-Regular.eot');
+  src: url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Regular/BentonSans-Regular.eot') format('embedded-opentype'),
+  url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Regular/BentonSans-Regular.woff') format('woff'),
+  url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Regular/BentonSans-Regular.ttf') format('truetype'),
+  url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Regular/BentonSans-Regular.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "BentonSans-Regular";
+  src: url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Bold/BentonSans-Bold.eot');
+  src: url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Bold/BentonSans-Bold.eot') format('embedded-opentype'),
+  url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Bold/BentonSans-Bold.woff') format('woff'),
+  url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Bold/BentonSans-Bold.ttf') format('truetype'),
+  url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Bold/BentonSans-Bold.svg') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}
+
+$nrw-primary: #233755; // dark_blue
+$nrw-secondary: #3C506E; // blue
+$nrw-gray: #d9dada; //grey
+$nrw-light: #EAEFF6; // light blue
+
+
+//other colors
+
+$nrw-green: #008732;
+$nrw-yellow: #a76600;
+$nrw-red: #8b1a1a;
+$nrw-twitter-blue: #009ee0;
+$facebook-blue: #3b5999;
+$youtube-red: #c9332d;
+$google-plus-red: #db4437;
+$pinterest-red: #bd081b;
+$flickr-blue: #0063dc;
+$flickr-pink: #ff0084;
+$vimeo-blue: #00b9e7;
+
+$background-grey: #c0c0c0;
 
 //
 // Variables
 // --------------------------------------------------
 //== Colors
 //##Colorguide
+
 $color-white: #ffffff;
 $color-white-transparent: rgba($color-white, 0.9);
 $color-gray: #838e98;
 $color-blue: #004473;
 $color-red: #ab0033;
 $color-yellow: #ffc72a;
-$color-green: #00945f;
 //## Gray and brand colors for use across Bootstrap.
 $gray-base: #000000;
 $gray-darker: lighten($gray-base, 13.5%);
@@ -24,11 +67,12 @@ $gray-dark: lighten($gray-base, 20%);
 $gray: lighten($gray-base, 33.5%);
 $gray-light: #e3e3e3;
 $gray-lighter: #f5f5f5;
-$brand-primary: $color-blue;
-$brand-success: $color-green;
-$brand-info: $color-gray;
-$brand-warning: $color-yellow;
-$brand-danger: $color-red;
+$brand-primary: $nrw-primary;
+$brand-secondary: $nrw-secondary;
+$brand-success: $nrw-green;
+$brand-info: $nrw-gray;
+$brand-warning: $nrw-yellow;
+$brand-danger: $nrw-red;
 
 //== Scaffolding
 //
@@ -51,22 +95,23 @@ $link-hover-decoration: underline;
 //== Typography
 //
 //## Font, line-height, and color for body text, headings, and more.
-$font-family-sans-serif: 'Noto Sans', 'Open Sans', arial, sans-serif;
-$font-family-serif: 'Noto Serif', Georgia, "Times New Roman", Times, serif;
+$font-family-sans-serif: 'BentonSans-Regular', 'Open Sans', arial, sans-serif;
+$font-family-serif: Georgia, "Times New Roman", Times, serif;
 
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace: Menlo, Monaco, Consolas, "Courier New", monospace;
 $font-family-base: $font-family-sans-serif;
-$font-size-base: 18px;
+$font-size-base: 16px;
 $font-size-large: ceil(($font-size-base * 1.25));
-$font-size-small: ceil(($font-size-base * 0.85));
-$font-size-h1: floor(($font-size-base * 2.0));
+$font-size-small: ceil(($font-size-base * 0.75)); //12px
+$font-size-extra-small: ceil(($font-size-base * 0.626)); //10px
+$font-size-h1: floor(($font-size-base * 2.125)); //34px
 $font-size-banner-h1: floor(($font-size-base * 2.25));
-$font-size-h2: floor(($font-size-base * 1.75));
-$font-size-h3: ceil(($font-size-base * 1.5));
-$font-size-h4: ceil(($font-size-base * 1.25));
-$font-size-h5: $font-size-base;
-$font-size-h6: ceil(($font-size-base * 0.85));
+$font-size-h2: floor(($font-size-base * 1.5)); // 24px
+$font-size-h3: ceil(($font-size-base * 1.25)); //20px
+$font-size-h4: ceil(($font-size-base * 1.125)); //18px
+$font-size-h5: $font-size-base; //16px
+$font-size-h6: ceil(($font-size-base * 0.875));//14px
 //** Unit-less `line-height` for use in components like buttons.
 $line-height-base: 1.6;
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
@@ -85,9 +130,10 @@ $title-underline-height: 4px;
 //** Load fonts from this directory.
 // [converter] If $bootstrap-sass-asset-helper if used, provide path relative to the assets load path.
 // [converter] This is because some asset helpers, such as Sprockets, do not work with file-relative paths.
+$icon-font-path: if($bootstrap-sass-asset-helper, "bootstrap/", "../fonts/bootstrap/");
 
 // Set the proper directory for the Bootstrap Glyphicon font.
-$icon-font-path: "../../../../contrib/degov_nrw_theme/public/fonts/bootstrap/";
+$icon-font-path: "../fonts/bootstrap/";
 
 //** File name for all font files.
 $icon-font-name: "glyphicons-halflings-regular";
@@ -98,8 +144,8 @@ $icon-font-svg-id: "glyphicons_halflingsregular";
 //== Components
 //
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
-$padding-base-vertical: 6px;
-$padding-base-horizontal: 12px;
+$padding-base-vertical: 5px;
+$padding-base-horizontal: 15px;
 $padding-large-vertical: 10px;
 $padding-large-horizontal: 16px;
 $padding-small-vertical: 5px;
@@ -288,7 +334,7 @@ $zindex-modal: 1050;
 //## Define the breakpoints at which your layout will change, adapting to different screen sizes.
 // Extra small screen / phone
 //** Deprecated `$screen-xs` as of v3.0.1
-$screen-xs: 480px;
+$screen-xs: 510px;
 
 //** Deprecated `$screen-xs-min` as of v3.2.0
 $screen-xs-min: $screen-xs;
@@ -298,7 +344,7 @@ $screen-phone: $screen-xs-min;
 
 // Small screen / tablet
 //** Deprecated `$screen-sm` as of v3.0.1
-$screen-sm: 768px;
+$screen-sm: 720px;
 $screen-sm-min: $screen-sm;
 
 //** Deprecated `$screen-tablet` as of v3.0.1
@@ -314,7 +360,7 @@ $screen-desktop: $screen-md-min;
 
 // Large screen / wide desktop
 //** Deprecated `$screen-lg` as of v3.0.1
-$screen-lg: 1300px;
+$screen-lg: 1310px;
 $screen-lg-min: $screen-lg;
 
 //** Deprecated `$screen-lg-desktop` as of v3.0.1
@@ -611,8 +657,8 @@ $modal-header-border-color: #e5e5e5;
 
 //** Modal footer border color
 $modal-footer-border-color: $modal-header-border-color;
-$modal-lg: 900px;
-$modal-md: 600px;
+$modal-lg: 1100px;
+$modal-md: 900px;
 $modal-sm: 300px;
 
 //== Alerts
@@ -807,15 +853,15 @@ $carousel-indicator-border-color: #ffffff;
 $carousel-caption-color: #ffffff;
 
 // Photoswipe
-$pswp__show-hide-transition-duration: 333ms !default;
-$pswp__controls-transition-duration: 333ms !default;
-$pswp__background-color: #000 !default;
-$pswp__placeholder-color: #222 !default;
-$pswp__box-sizing-border-box: true !default; // disable .pswp * { box-sizing:border-box } (in case you already have it in your site css)
-$pswp__root-z-index: 1500 !default;
-$pswp__assets-path: '' !default; // path to skin assets folder (preloader, PNG and SVG sprite)
-$pswp__error-text-color: #CCC !default; // "Image not loaded" text color
-$pswp__include-minimal-style: true !default;
+$pswp__show-hide-transition-duration: 333ms;
+$pswp__controls-transition-duration: 333ms;
+$pswp__background-color: #000;
+$pswp__placeholder-color: #222;
+$pswp__box-sizing-border-box: true; // disable .pswp * { box-sizing:border-box } (in case you already have it in your site css)
+$pswp__root-z-index: 1500;
+$pswp__assets-path: ''; // path to skin assets folder (preloader, PNG and SVG sprite)
+$pswp__error-text-color: #CCC; // "Image not loaded" text color
+$pswp__include-minimal-style: true;
 
 //== Close
 //
