--- a/source/sass/components/_header.scss
+++ b/source/sass/components/_header.scss
@@ -109,7 +109,7 @@
 					min-height: auto;
 					padding: 0 $grid-gutter-width/2;
 					#service-menu li:first-child {
-						border-top: 1px solid $nrw-light;
+						border-top: 1px solid $degov-light;
 					}
 					.right{
 						float: left;
@@ -122,7 +122,7 @@
 						width: 100%;
 						li{
 							width: 100%;
-							border-bottom: 1px solid $nrw-light;
+							border-bottom: 1px solid $degov-light;
 							a,
 							a.gebaerdensprache,
 							a.leichtesprache,
