--- a/source/sass/components/_search.scss
+++ b/source/sass/components/_search.scss
@@ -102,7 +102,7 @@
       position: absolute;
       right: 40px;
       top: 48%;
-      background: $nrw-green;
+      background: $degov-green;
       color: $color-white;
       font-size: $font-size-h2;
       padding: 9px;
@@ -225,7 +225,7 @@
         border: 0;
         margin-top: $grid-gutter-width/2.66;
         .fa{
-          background: $nrw-green;
+          background: $degov-green;
           font-size: $font-size-h6;
           margin-left: $grid-gutter-width/6;
           padding: $grid-gutter-width/8 $grid-gutter-width/6.66;
