--- a/source/sass/modules/media_address/_media-address.scss
+++ b/source/sass/modules/media_address/_media-address.scss
@@ -1,7 +1,7 @@
 .address {
   font-size: $font-size-h6;
   &__headline {
-    color: $nrw-secondary;
+    color: $degov-secondary;
     font-size: $font-size-h3;
     line-height: $line-height-base;
     margin-bottom: $padding-base-vertical;
