--- a/source/sass/modules/media_image/_media-image.scss
+++ b/source/sass/modules/media_image/_media-image.scss
@@ -85,7 +85,7 @@
     }
   }
   .image__extra-info {
-    background: $nrw-secondary;
+    background: $degov-secondary;
     padding: $grid-gutter-width/2;
     font-size: $font-size-h4;
     .file {
@@ -94,7 +94,7 @@
       padding: $padding-large-horizontal/2;
       &,
       a {
-        color: $nrw-secondary;
+        color: $degov-secondary;
       }
     }
   }
