--- a/source/sass/modules/paragraph_media_reference/_paragraph-media-reference.scss
+++ b/source/sass/modules/paragraph_media_reference/_paragraph-media-reference.scss
@@ -32,7 +32,7 @@
     }
     &-twitter {
       .paragraph__header .fa-arrow-right {
-        background: $nrw-twitter-blue;
+        background: $degov-twitter-blue;
         &:before {
           content: '\f099';
         }
