--- a/source/sass/views/_view-blog_author.scss
+++ b/source/sass/views/_view-blog_author.scss
@@ -1,7 +1,7 @@
 .block-views-blockblog-author-blog-author {
   margin: 0 -$padding-large-vertical*2;
   color: $brand-primary;
-  background: $nrw-light;
+  background: $degov-light;
   .form-group{
     margin: 0;
   }
