--- a/STARTER_KIT/source/sass/_variables.scss
+++ b/STARTER_KIT/source/sass/_variables.scss
@@ -3,41 +3,41 @@
  */
 $bootstrap-sass-asset-helper: false;
 
-$fa-font-path:   "../../../../nrw/nrw_base_theme/public/fonts/font-awesome";
+$fa-font-path:   "../../../../degov/degov_base_theme/public/fonts/font-awesome";
 
 @font-face {
   font-family: "BentonSans-Regular";
-  src: url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Regular/BentonSans-Regular.eot');
-  src: url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Regular/BentonSans-Regular.eot') format('embedded-opentype'),
-  url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Regular/BentonSans-Regular.woff') format('woff'),
-  url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Regular/BentonSans-Regular.ttf') format('truetype'),
-  url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Regular/BentonSans-Regular.svg') format('svg');
+  src: url('../../../../degov/degov_base_theme/public/fonts/BentonSans/BentonSans-Regular/BentonSans-Regular.eot');
+  src: url('../../../../degov/degov_base_theme/public/fonts/BentonSans/BentonSans-Regular/BentonSans-Regular.eot') format('embedded-opentype'),
+  url('../../../../degov/degov_base_theme/public/fonts/BentonSans/BentonSans-Regular/BentonSans-Regular.woff') format('woff'),
+  url('../../../../degov/degov_base_theme/public/fonts/BentonSans/BentonSans-Regular/BentonSans-Regular.ttf') format('truetype'),
+  url('../../../../degov/degov_base_theme/public/fonts/BentonSans/BentonSans-Regular/BentonSans-Regular.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "BentonSans-Regular";
-  src: url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Bold/BentonSans-Bold.eot');
-  src: url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Bold/BentonSans-Bold.eot') format('embedded-opentype'),
-  url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Bold/BentonSans-Bold.woff') format('woff'),
-  url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Bold/BentonSans-Bold.ttf') format('truetype'),
-  url('../../../../nrw/nrw_base_theme/public/fonts/BentonSans/BentonSans-Bold/BentonSans-Bold.svg') format('svg');
+  src: url('../../../../degov/degov_base_theme/public/fonts/BentonSans/BentonSans-Bold/BentonSans-Bold.eot');
+  src: url('../../../../degov/degov_base_theme/public/fonts/BentonSans/BentonSans-Bold/BentonSans-Bold.eot') format('embedded-opentype'),
+  url('../../../../degov/degov_base_theme/public/fonts/BentonSans/BentonSans-Bold/BentonSans-Bold.woff') format('woff'),
+  url('../../../../degov/degov_base_theme/public/fonts/BentonSans/BentonSans-Bold/BentonSans-Bold.ttf') format('truetype'),
+  url('../../../../degov/degov_base_theme/public/fonts/BentonSans/BentonSans-Bold/BentonSans-Bold.svg') format('svg');
   font-weight: bold;
   font-style: normal;
 }
 
-$nrw-primary: #233755; // dark_blue
-$nrw-secondary: #3C506E; // blue
-$nrw-gray: #d9dada; //grey
-$nrw-light: #EAEFF6; // light blue
+$degov-primary: #233755; // dark_blue
+$degov-secondary: #3C506E; // blue
+$degov-gray: #d9dada; //grey
+$degov-light: #EAEFF6; // light blue
 
 
 //other colors
 
-$nrw-green: #008732;
-$nrw-yellow: #a76600;
-$nrw-red: #8b1a1a;
-$nrw-twitter-blue: #009ee0;
+$degov-green: #008732;
+$degov-yellow: #a76600;
+$degov-red: #8b1a1a;
+$degov-twitter-blue: #009ee0;
 $facebook-blue: #3b5999;
 $youtube-red: #c9332d;
 $google-plus-red: #db4437;
@@ -67,12 +67,12 @@ $gray-dark: lighten($gray-base, 20%);
 $gray: lighten($gray-base, 33.5%);
 $gray-light: #e3e3e3;
 $gray-lighter: #f5f5f5;
-$brand-primary: $nrw-primary;
-$brand-secondary: $nrw-secondary;
-$brand-success: $nrw-green;
-$brand-info: $nrw-gray;
-$brand-warning: $nrw-yellow;
-$brand-danger: $nrw-red;
+$brand-primary: $degov-primary;
+$brand-secondary: $degov-secondary;
+$brand-success: $degov-green;
+$brand-info: $degov-gray;
+$brand-warning: $degov-yellow;
+$brand-danger: $degov-red;
 
 //== Scaffolding
 //
