--- a/source/sass/elements/_blocks.scss
+++ b/source/sass/elements/_blocks.scss
@@ -24,7 +24,7 @@
     padding: $grid-gutter-width/2;
     display: inline-block;
     color: $brand-secondary;
-    background-color: $nrw-light;
+    background-color: $degov-light;
     width: 100%;
 
     &:before {
