--- a/source/sass/modules/tweets/_tweets.scss
+++ b/source/sass/modules/tweets/_tweets.scss
@@ -16,10 +16,10 @@
     max-height: 98px;
   }
   &.odd {
-    border-right: 1px solid $nrw-light;
+    border-right: 1px solid $degov-light;
   }
   &.even {
-    border-left: 1px solid $nrw-light;
+    border-left: 1px solid $degov-light;
     margin-left: -1px;
   }
   &__follow {
@@ -35,7 +35,7 @@
       color: $gray-base;
       border-radius: $border-radius-small;
       &:before {
-        color: $nrw-twitter-blue;
+        color: $degov-twitter-blue;
         font-size: $font-size-h3;
         vertical-align: sub;
       }
