--- a/templates/system/footer.html.twig
+++ b/templates/system/footer.html.twig
@@ -14,7 +14,7 @@
         </div>
         <div class="footer__bottom-menu">
             <div class="footer__copyright col-md-6">
-                © 2017 Staatskanzlei des Landes Nordrhein-Westfalen
+                © 2017 deGov
             </div>
             <div class="footer__footer_menu col-md-6 right">
             {# demo menu #}
