--- a/templates/system/page.html.twig
+++ b/templates/system/page.html.twig
@@ -123,8 +123,7 @@
       <div class="header__branding">
           <a href="{{ url('<front>') }}">
             <div class="col-md-6 header__title">
-                <span>WIR IN NRW</span>
-                DAS LANDESPORTAL
+                <span>WIR IN DEGOV</span>
             </div>
           </a>
           <div class="col-xs-6 header__menu-icon">
